@@ -9,6 +9,7 @@ main_module      = lib/Dist/Zilla/PluginBundle/Author/CHIM.pm
 [@Author::CHIM]
 dist = Dist-Zilla-PluginBundle-Author-CHIM
 
+
 [ModuleShareDirs]
 Dist::Zilla::MintingProfile::Author::CHIM = profiles
 
